Updated Profile Photo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container--main">
         <section id="wrapper--hero" class="section--page">
-            <img src="./Assets/Images/Pranay.png"/>
+            <img src="./Assets/Images/Professional_Photo.png"/>
             <div>
                 <h1>Nagella Sai Pranay Kumar</h1>
                 <p>📧 sainagella2811@gmail.com</p>
