Updated Education Details

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <ul>
                 <li>Branch - ECE(AIML) [2020-2024]</li>
                 <li>CGPA - 9.31</li>
+                <li>Secured 1st place in IoT Workshop</li>
+                <li>Best Presentation in Robotics Workshop</li>
             </ul>
 
             <p>🏫Narayana IIT Academy, Nellore</p>
@@ -44,6 +46,7 @@
             <ul>
                 <li>10th Standard [2018]</li>
                 <li>CGPA - 9.8</li>
+                <li>Runner Up in Eassy Writing Competition</li>
             </ul> 
         </section>
 
