Updated Work Experience

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
         </section>
 
         <section id="work-history-wrapper" class="section--page">
-            <h2>Work History</h2>
+            <h2>Work Experience</h2>
+                <strong>Research Inter at Software Defined Vehicles Lab</strong>
+                <p>May 2023 - June 2023</p>
+                <ul>
+                    <li>Development of Electrowetting System on Dielectric [EWOD]</li>
+                    <li>Designed a device, provided progress updates, and proposed solutions to issues.</li>
+                </ul>
                 <strong>Intern at Central Manufacturing Technology Institute</strong>
                 <p>May 2023 - June 2023</p>
                 <ul>
