Updated Work Exp & Project

--- a/index.html
+++ b/index.html
@@ -62,16 +62,22 @@
         <section id="work-history-wrapper" class="section--page">
             <h2>Work Experience</h2>
                 <strong>Research Inter at Software Defined Vehicles Lab</strong>
-                <p>May 2023 - June 2023</p>
+                <p>May 2024 - Present</p>
                 <ul>
-                    <li>Development of Electrowetting System on Dielectric [EWOD]</li>
-                    <li>Designed a device, provided progress updates, and proposed solutions to issues.</li>
+                    <li>Exploring various SLAM Algorithms and gained expertise on numerous sensors for AD/ADAS Applications.</li>
+                    <li>Got familiar with Linux OS and Learned ROS(Noetic) & ROS2(Humble).</li>
+                    <li>Familiar with dSPACE tools (SCALEXIO, MicroAutoBox) for Simulation and Validation.</li>
                 </ul>
                 <strong>Intern at Central Manufacturing Technology Institute</strong>
                 <p>May 2023 - June 2023</p>
                 <ul>
-                    <li>Development of Electrowetting System on Dielectric [EWOD]</li>
-                    <li>Designed a device, provided progress updates, and proposed solutions to issues.</li>
+                    <li>Initiated the development of an Electrowetting System on Dielectric (EWOD) project.</li>
+                    <li>Conducted comprehensive research into EWOD principles and applications, establishing a strong
+                        theoretical foundation for the project.</li>
+                    <li>Designed and fabricated prototypes, demonstrating the system's capabilities in fluid manipulation and
+                        microfluidic applications.</li>
+                    <li>Collaborated with interdisciplinary teams to explore potential applications in fields such as lab-on-a-chip
+                        devices and digital microfluidics.</li>
                 </ul>
         </section>
 
@@ -79,9 +85,9 @@
             <h2>Projects</h2>
 
             <div class="card--project">
-                <span>🏆 </span>Gesture Sense : Hand Gesture Control for Laptops
+                <span>🏆 </span>Gesture Sense : An Automated Hand Gesture Control
                 <ul>
-                    <li>Using Hand Gestures to control Laptops seamlessly without using a mouse.</li>
+                    <li>Explored two approaches for gesture control: OpenCV & deep learning methods using 3D-CNN with LSTM.</li>
                     <li>Coded using Python Programming Language.</li>
                     <li>Libraries Used are OpenCV, PyAutoGUI, and Media Pipe.</li>
                     <li>Developed a Deep Learning Model using 3DCNN+3LSTM layers.</li>
