--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
         <section class="section--page">
             <h2>📝 <b>Projects</b></h2>
             <ul>
+                
+                <li>
+                    <strong>Comparison of 2D & 3D LiDAR Based SLAM Techniques</strong>
+                    <ul>
+                        <li>Analyzed 2D SLAMs:Gmapping, Hector, Karto, FrontierExploration.</li>
+                        <li>Analyzed 3D SLAMs:FastLIO, LOAM, ISC-LOAM, LIO-SAM, DLO.</li>
+                        <li>Evaluated SLAM Algorithms using metrics like CPU Load, RAM Usage, Computation Time, and Map Accuracy.</li>
+                        <li>Developed a Computation Profiler for real-time performance analysis.</li>
+                        <li>🛠️ <b>Tools:</b> ROS (Noetic), RViz | <b>OS:</b> Linux (Ubuntu 20.04)</li>
+                        <li>📂 <b>Libraries:</b> psutil, rospy</li>
+                        <h2>🌐 GitHub Repository</h2>
+                        <p>
+                            You can view the source code for this project on GitHub: 
+                            <a href="https://github.com/GITAM-MURTI-SDVLab/Profilers.git" target="_blank">https://github.com/GITAM-MURTI-SDVLab/Profilers.git</a>
+                        </p>
+                    </ul>
+                </li>
+                
                 <li>
                     <strong>Gesture Sense: An Automated Hand Gesture Control (2023 - 2024)</strong>
                     <ul>
