--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
                         <li>Developed a Computation Profiler for real-time performance analysis.</li>
                         <li>🛠️ <b>Tools:</b> ROS (Noetic), RViz | <b>OS:</b> Linux (Ubuntu 20.04)</li>
                         <li>📂 <b>Libraries:</b> psutil, rospy</li>
-                        <h2>🌐 GitHub Repository</h2>
                         <p>
-                            You can view the source code for this project on GitHub: 
+                            🌐 <b>GitHub Repository</b>
                             <a href="https://github.com/GITAM-MURTI-SDVLab/Profilers.git" target="_blank">https://github.com/GITAM-MURTI-SDVLab/Profilers.git</a>
                         </p>
                     </ul>
