--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                         <li>Developed a Computation Profiler for real-time performance analysis.</li>
                         <li>🛠️ <b>Tools:</b> ROS (Noetic), RViz | <b>OS:</b> Linux (Ubuntu 20.04)</li>
                         <li>📂 <b>Libraries:</b> psutil, rospy</li>
-                        <p>
-                            🌐 <b>GitHub Repository</b>
+                        <li>
+                            🌐 <b>GitHub Repository : </b>
                             <a href="https://github.com/GITAM-MURTI-SDVLab/Profilers.git" target="_blank">https://github.com/GITAM-MURTI-SDVLab/Profilers.git</a>
-                        </p>
+                        </li>
                     </ul>
                 </li>
                 
