--- a/index.html
+++ b/index.html
@@ -108,6 +108,27 @@
                 </li>
                 
                 <li>
+                    <strong>Gazebo Simulation for Autonomous Navigation</strong>
+                    <ul>
+                        <li>Simulated Various robots : Two-Wheeled Differential Drive, Four-Wheeled Skid Steer, and Quadruped (Four-Legged Robot)</li>
+                        <li>Integrated LiDAR (2D & 3D), camera, and IMU Plugins into the robots for sensor data acquisition.</li>
+                        <li>Applied SLAM Algorithms to map custom-designed environments.</li>
+                        <li>Evaluated the performance of SLAM Methods in diverse simulation scenarios.</li>
+                        <li>🛠️ <b>Tools:</b> ROS2 (Humble), Gazebo | <b>OS:</b> Linux (Ubuntu 22.04)</li>
+                    </ul>
+                </li>
+
+                <li>
+                    <strong>CAN Data Visualization using dSPACE MicroAutoBox III</strong>
+                    <ul>
+                        <li>Configured and interfaced dSPACE MicroAutoBox III to read vehicle CAN Data.</li>
+                        <li>Visualized real-time data in dSPACE Control Desk for system monitoring and analysis.</li>
+                        <li>Enhanced understanding of vehicle dynamics through parameter Visualization.</li>
+                        <li>🛠️ <b>Tools:</b> dSPACE MicroAutoBox III, Control Desk, Configuration Desk | <b>OS:</b> Windows</li>
+                    </ul>
+                </li>
+
+                <li>
                     <strong>Gesture Sense: An Automated Hand Gesture Control (2023 - 2024)</strong>
                     <ul>
                         <li>Explored two approaches for gesture control: OpenCV & deep learning methods using 3D-CNN with LSTM.</li>
