--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <section class="section--page">
             <h2><b>Technical Skills</b></h2>
             <ul>
-                <li>🔌 <b>Boards:</b> Arduino UNO, ESP8266, Tetrix Prizm</li>
-                <li>🖥️ <b>Operating Systems:</b> Windows, Linux</li>
+                <li>🔌 <b>Boards:</b> NVIDIA Jetson AGX Orin, Arduino UNO, ESP8266, Tetrix Prizm</li>
+                <li>🖥️ <b>Operating Systems:</b> Windows, Linux (Ubuntu 20.04, 22.04)</li>
                 <li>🖥️ <b>Programming:</b> Python, C++, MySQL</li>
-                <li>🛠️ <b>Tools:</b> MATLAB, VS Code, Jupyter, Google Colab, Arduino IDE, ROS, ROS2</li>
+                <li>🛠️ <b>Tools:</b> ROS (Noetic), ROS2 (Humble), MATLAB, Simulink, dSPACE (SCALEXIO, MicroAutoBox III), VS Code, Jupyter, Google Colab, Arduino IDE</li>
                 <li>🤖 <b>Fields:</b> Robotics & Automation, Internet of Things (IoT), Artificial Intelligence & Machine Learning</li>
             </ul>
         </section>
@@ -71,8 +71,10 @@
                     <ul>
                         <li>Conducting comprehensive research in the Software Defined Vehicles (SDV) Lab in the area of AD/ADAS.</li>
                         <li>Exploring various SLAM Algorithms and gained expertise on numerous sensors for AD/ADAS Applications.</li>
-                        <li>Got familiar with Linux OS and Learned ROS(Noetic) & ROS2(Humble).</li>
+                        <li>Proficient in Linux OS and actively working with ROS(Noetic) & ROS2(Humble).</li>
+                        <li>Integrated various LiDARs (2D & 3D), Camears, RADARs in ROS (Noetic) & ROS2 (Humble) Frameworks.</li>
                         <li>Familiar with dSPACE tools (SCALEXIO, MicroAutoBox) for Simulation and Validation.</li>
+                        <li>Mentoring capstone projects and guiding students working in the lab.</li>
                     </ul>
                 </li>
                 <li>
